actualizaciones de conexion
